# fuzzy-ledger-narwhal

./: .gitignore  CLAUDE.md  LICENSE  README.md  architecture.md  package-lock.json  package.json  user-guide.md
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  local_seed_overrides.example.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/: 0001_initial_schema.sql
src-tauri/sample_data/: README.md  coinbase_placeholder_sample.csv  dwp_anchorage_sample.csv
src-tauri/src/: commands.rs  db.rs  ledger.rs  lib.rs  lots.rs  main.rs  migrations.rs  models.rs  seed.rs
src-tauri/src/import/: csv_parse.rs  dedup.rs  mod.rs  staging.rs
src/bindings/: AddressDto.ts  CommitSummaryDto.ts  Holding.ts  HoldingHierarchyDto.ts  ImportPreviewDto.ts  LedgerEntryDto.ts  LotDto.ts  NewDisposalEntry.ts  NewDustInEntry.ts  NewIncomeEntry.ts  NewLedgerEntry.ts  NewTradeEntry.ts  NewTransferEntry.ts  ReviewFlagDto.ts  StagingRowDto.ts  VenueHierarchyDto.ts
src/components/: EntriesGrid.tsx  ImportPreview.tsx  LotsGrid.tsx  PendingTransfers.tsx  ReviewFlagsGrid.tsx  VenueHierarchy.tsx
src/components/EntryForms/: BuyForm.tsx  DisposalEntryForm.tsx  DustInForm.tsx  IncomeForm.tsx  TradeForm.tsx  TransferForm.tsx  useHoldings.ts
